--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "blog",
+  "name": "blogrouter",
   "version": "1.0.0",
-  "description": "Blog CRUD drill",
-  "main": "models.js",
+  "description": "Blog Router Exercise (Express, Node.js)",
+  "main": "blogRouter.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jmfulgham/blogRouter.git"
+  },
   "keywords": [
-    "blog",
-    "CRUD",
-    "node.js",
-    "express",
-    "npm"
+    "Express",
+    "Nodejs",
+    "Node.js",
+    "Javascript",
+    "API",
+    "Postman"
   ],
   "author": "Mone't Fulgham",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.2",
-    "morgan": "^1.9.0",
-    "uuid": "^3.1.0"
-  }
+  "bugs": {
+    "url": "https://github.com/jmfulgham/blogRouter/issues"
+  },
+  "homepage": "https://github.com/jmfulgham/blogRouter#readme"
 }
