--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "morgan": "^1.9.0",
     "uuid": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^4.0.1"
+  },
   "scripts": {
-    "start": "node blogRouter.js"
+    "start": "node blogRouter.js",
+    "test": "NODE_ENV='test' mocha --exit ./test"
   },
   "repository": {
     "type": "git",
