--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "blogrouter",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "blogRouter.js",
   "dependencies": {
     "express": "^4.16.2",
+    "mongo": "^0.1.0",
+    "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
     "uuid": "^3.1.0"
   },
@@ -14,7 +16,7 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "start": "node blogRouter.js",
+    "start": "node server.js",
     "test": "NODE_ENV='test' mocha --exit ./test"
   },
   "repository": {
